--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,12 @@
 body {
-  margin: 0;
+  margin: 10px;
+}
+
+.place-btn {
+  margin: 10px 0 0 5px;
+}
+
+.place-list {
+  padding: 10px 0 0 5px;
+  background-color: #EEF;
 }
